--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,12 @@
     width: 15%;
     height: 100%;
 }
-
-
-
+ 
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+    overflow-y: auto !important;
+
 }
 .navbar{
     box-shadow: 2px 2px 5px #000;
